--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,24 +9,26 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
-      
+
       - uses: pnpm/action-setup@v2
         with:
           version: 9.15.0
-      
+
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'pnpm'
-      
-      - run: pnpm install --frozen-lockfile
-      
-      - run: pnpm type-check
-      
-      - run: pnpm lint
-      
-      - run: pnpm test
 
+      - run: pnpm install --frozen-lockfile
+
+      - run: pnpm type-check
+
+      - run: pnpm lint
+
+      - run: pnpm security:audit
+        continue-on-error: true
+
+      - run: pnpm test
